[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Worlds/World2/World2.gd" type="Script" id=1]
[ext_resource path="res://Assets/Pads/Pad_02_1.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Worlds/World.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Worlds/WorldCamera.gd" type="Script" id=4]
[ext_resource path="res://Assets/Bonus_Items/Jump_Bonus_02.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 120, 170 )

[node name="World2Root" type="Node2D"]
script = ExtResource( 1 )

[node name="World2Area" type="Area2D" parent="."]

[node name="World" type="Sprite" parent="World2Area"]
position = Vector2( 430.623, 467.384 )
scale = Vector2( 0.308738, 0.52623 )
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="WorldCamera" type="Camera2D" parent="World2Area/World"]
position = Vector2( -455.477, 80.9836 )
scale = Vector2( 1.34457, 1.09412 )
script = ExtResource( 4 )

[node name="Tween" type="Tween" parent="World2Area/World/WorldCamera"]

[node name="Sprite" type="Sprite" parent="World2Area/World"]
position = Vector2( 11.4036, -282.092 )
scale = Vector2( 1.34457, 1.09412 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="World2Area"]
position = Vector2( 430, 410 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
[connection signal="input_event" from="World2Area" to="." method="_on_World2Area_input_event"]
